# ginit

./: .gitignore  .nvimlog  Cargo.toml  README  README.md  build.rs  config.toml  editor-notes.txt  editor.c  init-config.h  init.c  rtnl.c  rtnl.h  todo.md  todo.txt
init/: build.sh  init.c  rtnl.c
init/src/: config.rs  kernel_opts.rs  lib.rs  main.rs  net.rs  shutdown.rs  ui.rs
src/: config.rs  lib.rs  libc_wrapper.rs  linux.rs  main.rs  mounts.rs  net.rs  seat.rs  shutdown.rs  sysctl.rs  ui.rs
src/backup/: mod.rs
