[package]
name = "ginit"
description = "A small init system for a desktop system."
version = "0.1.0"
authors = ["Greg Depoire--Ferrer <misc5794@gregdf.com>"]
license = "GPL-3"
edition = "2018"

[dependencies]
libc = "0.2"

[build-dependencies]
toml = "0.5.8"
libc = "0.2"

[build-dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[profile.release]
# Tweaks to build a smaller executable.
lto = true
codegen-units = 1
